[metadata]
name = vimsaver-indigoparadox
version = v0.1
description = Terminal emulator save and restore
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/vimsaver
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/vimsaver/issues
classifiers =
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.6
install_requires =
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
   vimsaver = vimsaver.__main__:main
